dnl Process this file with autoconf to produce a configure script.

AC_PREREQ(2.59)
AC_INIT(pla-dart-enf, 1.0, https://github.com/cps-sei/dartsim/issues)

AC_CANONICAL_SYSTEM
AC_CONFIG_MACRO_DIRS([m4])

AM_INIT_AUTOMAKE([-Wall -Werror foreign])

AC_PROG_CXX
AM_PROG_AR
LT_INIT

AC_CONFIG_FILES(Makefile src/Makefile)
AC_OUTPUT

